# supplyx

./: .gitignore  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
.cargo/: config.toml
src/backend/: Cargo.toml  backend.did
src/backend/src/: app.js  lib.rs
src/backend/src/config/: cors.js
src/backend/src/controllers/: authController.js
src/backend/src/middleware/: auth.js  errorHandler.js
src/backend/src/models/: User.js
src/backend/src/routes/: authRoutes.js  dashboardRoutes.js
src/backend/src/utils/: logger.js
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
src/frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/frontend/public/: index.html  manifest.json
src/frontend/src/: App.js  App.jsx  App.tsx  index.css  main.jsx  main.tsx
src/frontend/src/assets/: theme.js  theme.jsx
src/frontend/src/components/: ComplianceScoreCard.tsx  Layout.js  Layout.jsx  LoadingSpinner.js  LoadingSpinner.jsx  LoadingSpinner.tsx  Logo.js  Logo.jsx  Logo.tsx  Navbar.js  Navbar.jsx  Navbar.tsx  ProductScanner.tsx  SupplyChainMap.tsx
src/frontend/src/contexts/: AuthContext.js  AuthContext.jsx  AuthContext.tsx  ThemeContext.js  ThemeContext.jsx  ThemeContext.tsx
src/frontend/src/layouts/: MainLayout.jsx  MainLayout.tsx
src/frontend/src/pages/: About.js  About.jsx  AddProduct.js  Analytics.jsx  Analytics.tsx  CreateProduct.jsx  Dashboard.jsx  Dashboard.tsx  Home.js  Home.jsx  Landing.jsx  Landing.tsx  Login.js  Login.jsx  Login.tsx  (+15 more)
(+14 files in other folders)
