[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.1"
ic-cdk-macros = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
sha2 = "0.10.7"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1 